--- a/app/src/main/res/layout/fragment_regis.xml
+++ b/app/src/main/res/layout/fragment_regis.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/tambah_menu_baru"
+            android:text="@string/tambah_karyawan_baru"
             android:textSize="26sp"
             android:textStyle="bold" />
 
@@ -123,21 +123,33 @@
         tools:layout_editor_absoluteX="24dp">
 
         <ImageView
+            android:id="@+id/imageContainer"
             android:layout_width="120dp"
             android:layout_height="90dp"
-            android:src="@drawable/ayam" />
+            android:src="@drawable/ic_blank" />
 
         <Button
-            android:id="@+id/tambahGambar"
             style="@style/Widget.Material3.Button.OutlinedButton.Icon"
+            android:id="@+id/tambahGambar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="20dp"
             android:layout_weight="0.1"
-            android:enabled="false"
-            android:text="@string/tambah"
-            app:icon="@drawable/ic_plus"
+            android:text="@string/gallery"
+            app:icon="@drawable/ic_galery"
+            app:iconTint="@color/blue" />
+
+        <Button
+            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
+            android:id="@+id/tambahGambarCam"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:layout_weight="0.1"
+            android:text="@string/camera"
+            app:icon="@drawable/ic_cam"
             app:iconTint="@color/blue" />
 
     </LinearLayout>
