--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,16 +37,17 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="28dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginEnd="28dp"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/selamat_datang_login"
                     android:textColor="@color/blue"
@@ -55,21 +56,21 @@
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:text="@string/silahkan_login_menggunakan_akun_yang_telah_didaftarkan_oleh_admin"
                     android:textSize="16sp" />
 
                 <com.google.android.material.divider.MaterialDivider
                     android:layout_width="wrap_content"
                     android:layout_height="1dp"
-                    android:layout_marginTop="14dp" />
+                    android:layout_marginTop="20dp" />
 
                 <EditText
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="14dp"
+                    android:layout_marginTop="20dp"
                     android:background="@drawable/rounded_txt"
                     android:hint="@string/email"
                     android:padding="8dp"
@@ -86,26 +87,29 @@
                     android:padding="8dp"
                     android:textSize="18sp" />
 
-                <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
-                    android:id="@+id/btn_login"
-                    android:layout_width="match_parent"
-                    android:layout_height="42dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/circle_button"
-                    android:text="@string/masuk"
-                    android:layout_gravity="center"
-                    android:textAllCaps="false"
-                    android:textColor="@color/white"
-                    app:spinning_bar_color="#FFF"
-                    app:spinning_bar_padding="6dp"
-                    app:spinning_bar_width="4dp" />
 
             </LinearLayout>
 
+            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
+                android:id="@+id/btn_login"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                android:layout_gravity="center|bottom"
+                android:layout_marginStart="28dp"
+                android:layout_marginEnd="28dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/circle_button"
+                android:text="@string/masuk"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                app:spinning_bar_color="#FFF"
+                app:spinning_bar_padding="6dp"
+                app:spinning_bar_width="4dp" />
 
         </LinearLayout>
 
 
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
