--- a/app/src/main/res/layout/item_menu_dashboard.xml
+++ b/app/src/main/res/layout/item_menu_dashboard.xml
@@ -16,13 +16,12 @@
         android:padding="12dp">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imgMenu"
             android:layout_width="180dp"
-            android:layout_height="110dp"
+            android:layout_height="120dp"
             android:layout_gravity="center"
-            android:background="@drawable/round_img"
             android:padding="4dp"
-            android:scaleType="centerCrop"
+            android:scaleType="fitXY"
             android:src="@drawable/ayam"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +29,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="12dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -52,22 +51,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-            <TextView
-                android:id="@+id/harga"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginTop="8dp"
-                android:text="IDR 11.000"
-                android:textColor="#3267E3"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.099"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nama_menu" />
 
         </LinearLayout>
-
+        <TextView
+            android:id="@+id/harga"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="bottom"
+            android:layout_marginTop="8dp"
+            android:text="IDR 11.000"
+            android:textColor="#3267E3"
+            android:textSize="16sp" />
 
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
