--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,7 +72,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/rounded_txt"
-                    android:hint="@string/email"
+                    android:hint="@string/username"
                     android:padding="8dp"
                     android:textSize="18sp" />
 
