--- a/app/src/main/res/layout/fragment_hapus_menu.xml
+++ b/app/src/main/res/layout/fragment_hapus_menu.xml
@@ -67,9 +67,10 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/imgContainer"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/ayam" />
+                android:src="@drawable/ic_blank" />
 
             <TextView
                 android:id="@+id/namaMenu"
