--- a/app/src/main/res/layout/item_menu_checkout.xml
+++ b/app/src/main/res/layout/item_menu_checkout.xml
@@ -6,10 +6,10 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/fotoMenu"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/ayam"
+        android:src="@drawable/ic_blank"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="4dp"
@@ -23,8 +23,8 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/ubahMenu"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/fotoMenu"
+        app:layout_constraintTop_toTopOf="@+id/fotoMenu"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="24dp"/>
 
